--- a/src/components/PageHeader/PageHeader.css
+++ b/src/components/PageHeader/PageHeader.css
@@ -130,4 +130,28 @@
     width: 100%;
     margin-bottom: 24px;
   }
+}
+@media screen and (max-width: 600px) {
+  .page-header {
+    width: 100%;
+    min-height: unset;
+    max-height: unset;
+    margin-bottom: 16px;
+    padding: 0;
+  }
+  .page-header-image-container {
+    width: 100%;
+    height: auto;
+    min-height: 0;
+    max-height: none;
+  }
+  .page-header-image-title {
+    bottom: 73px;
+  }
+  .page-header-subtitle {
+    bottom: 53px;
+  }
+  .page-header-content {
+    display: none;
+  }
 } 
