--- a/src/components/PostCard/PostCard.css
+++ b/src/components/PostCard/PostCard.css
@@ -150,4 +150,11 @@
   margin-left: 0;
   flex-shrink: 0;
   display: block;
+}
+
+@media screen and (max-width: 600px) {
+  .post-card {
+    width: 100%;
+    box-sizing: border-box;
+  }
 } 
