--- a/src/components/PostFeed/PostFeed.css
+++ b/src/components/PostFeed/PostFeed.css
@@ -3,4 +3,10 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
+}
+
+@media screen and (max-width: 600px) {
+  .post-feed {
+    width: 100%;
+  }
 } 
