--- a/src/pages/SearchResultsPage.css
+++ b/src/pages/SearchResultsPage.css
@@ -49,4 +49,15 @@
   font-weight: 700;
   line-height: normal;
   margin-left: 2px;
+}
+
+@media screen and (max-width: 600px) {
+  .search-results-bar {
+    width: 100%;
+    min-width: 0;
+    max-width: 100vw;
+    margin: 0 0 24px 0;
+    padding: 0 8px;
+    box-sizing: border-box;
+  }
 } 
